# ChangeLog for Eschalon Savefile Editor

   16 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Item quantity should allow values greater than 255

*eschalon_utils-0.6.1 (14 Jun 2010)

   14 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Fix to support gtk+ 2.20
   Bundle Windows version with gtk+ 2.20
   Added an Uninstall icon to start menu for Windows
   Handle when the initial load window is destroyed properly
   Update Book 1 avatar picture on load, even when it's ID 0

   12 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Fix window title for Book 2 Character Editor
   Fixed a bug which wouldn't always show changed
      elements in the item editor (book 2)
   Don't show permanent statuses which the engine overwrites

*eschalon_utils-0.6.0 (12 Jun 2010)

   09 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Added leftover Attribute/Skill points to character editor

   07-08 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   GUI Support for Book II characters

   06 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Command-line character editing fully supports Book II

   04 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Initial Book II integration work

   01 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
   Fixed a couple of minor typos

*eschalon_b1_utils-0.5.0 (31 May 2010)

   31 May 2010; CJ Kucera <pez@apocalyptech.com> :
   Warning when editing a "global" map file

   27 May 2010; CJ Kucera <pez@apocalyptech.com> :
   Conversion from Glade to GTKBuilder for UI
   Initial Packaging for Windows

   24 May 2010; CJ Kucera <pez@apocalyptech.com> :
   Move datafiles to their own "data" directory

   02 May 2010; CJ Kucera <pez@apocalyptech.com> :
   Reorganize "View" menu item
   Better user feedback about what actions are active

   13 Apr 2010; CJ Kucera <pez@apocalyptech.com> :
   Fixed a bug related to more recent gtk+ versions and
   background color selection for map elements.

   16 Mar 2010; CJ Kucera <pez@apocalyptech.com> :