@@ -1,5 +1,8 @@
 # ChangeLog for Eschalon Savefile Editor
 
+   18 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
+   Initial Book 2 Map object integration
+
    16 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
    Item quantity should allow values greater than 255
 
